# lnsy-script

./: .gitignore  AGENTS.md  COMPILATION_MEMO.md  Cargo.toml  README.md  build.rs  index.html
.cargo/: config.toml
.github/workflows/: release.yml
patches/gemm-common-0.17.1/src/: simd.rs
patches/gemm-common-0.18.2/src/: simd.rs
patches/gemm-common-0.19.0/src/: simd.rs
src/: agent.rs  cl.rs  database.rs  embedding_server.rs  graph_database.rs  knn.rs  lib.rs  main.rs  tools.rs  trm.rs  vector_database.rs
tests/: agent_basic.js  agent_class.js  agent_fetch.js  basic.js  benchmark_database.js  benchmark_graph_database.js  benchmark_vector_database.js  cl_basic.js  cl_kill.js  cl_nonzero.js  cl_notfound.js  cl_onstatus.js  cl_opts.js  cl_slow.js  cl_timeout.js  database_class.js  database_ops.js  embedding_server_class.js  embedding_server_embedding.js  embedding_server_ner.js  embedding_server_qa.js  embedding_server_sentiment.js  fetch_json.js  fetch_status.js  fetch_struct.js  fs_append.js  fs_delete.js  fs_read.js  fs_read_dot_env.js  fs_write.js  graph_database_class.js  graph_database_ops.js  knn_class.js  knn_classify.js  knn_persist.js  knn_query.js  knn_train.js  knn_train_text.js  multiline.js  objects.js  (+11 more)
tests/fixtures/: echo_worker.js  fetch_worker.js
