[package]
name = "lnsy-script"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lnsy-script"
path = "src/main.rs"

[dependencies]
rquickjs = { version = "0.11.0", features = ["loader", "futures", "macro"] }
reqwest = { version = "0.12", features = ["blocking"] }
axum = { version = "0.8" }
tower-http = { version = "0.6", features = ["fs"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26" }
rustls = { version = "0.23", features = ["ring"] }
rcgen = { version = "0.13" }
hyper-util = { version = "0.1" }
fastembed = "5.12.1"
ort = { version = "=2.0.0-rc.11", features = ["ndarray"] }
ndarray = "0.17.2"
tokenizers = { version = "0.22.2", default-features = false, features = ["onig"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
sqlitegraph = "2.0.8"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
